# Firing-Squad-Synchronization-Problem-Simulation-on-GPU

./: CMakeLists.txt  main.cu  transition_lnk.h
state_transition_diagram/: as_dot_file.dot  edge_logs.txt  readme_first.txt  rules.py  state_dia.py
